--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# EditorConfig is awesome: http://EditorConfig.org
+#EditorConfig is awesome: http://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
@@ -9,6 +9,9 @@ end_of_line = lf
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+
+[*.html]
+indent_size = 2
 
 # Tab indentation (no size specified)
 [*.js]
