use vi keybinds in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,14 @@
+# reload .tmux.conf
 bind r source-file ~/.tmux.conf
+
+# to show editor mode (--NORMAL--|--INSERT--|--VISUAL--)
 set-option -g status-left-length 100
+
+# scroll
+set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+set-window-option -g mode-keys vi
+
+bind-key > save-buffer ~/.tmux-buffer \; run-shell 'xsel -b -i < ~/.tmux-buffer' \; display-message "Copied to clipboard."
+bind-key < if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
