--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,5 +10,4 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 set-window-option -g mode-keys vi
 
-bind-key > save-buffer ~/.tmux-buffer \; run-shell 'xsel -b -i < ~/.tmux-buffer' \; display-message "Copied to clipboard."
-bind-key < if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
+if-shell 'test "$(uname -s)" = Darwin' "source-file ~/dotfiles/.tmux.conf.osx" "source-file ~/dotfiles/.tmux.conf.other"
