--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,12 @@
+# prefix changes to C-a
+set -g prefix C-a
+unbind C-b
+
+# decrease delay time
+set -sg escape-time 1
+
 # reload .tmux.conf
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # to show editor mode (--NORMAL--|--INSERT--|--VISUAL--)
 set-option -g status-left-length 100
@@ -8,6 +15,25 @@ set-option -g status-left-length 100
 set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
+# split pane with '|' and '-'
+bind | split-window -h
+bind - split-window -v
+
+# move pane like vim
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# resize pane like vim
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 set-window-option -g mode-keys vi
 
-if-shell 'test "$(uname -s)" = Darwin' "source-file ~/dotfiles/.tmux.conf.osx" "source-file ~/dotfiles/.tmux.conf.other"
+if-shell 'test "$(uname -s)" = Darwin' "source-file ~/.tmux.conf.osx" "source-file ~/.tmux.conf.other"
+
